--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,106 @@
 /* General Reset */
+
 body {
-    margin: 0;
+    margin: 0%;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #666667;
+    display: grid;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
-  
-  h1, h2, h3 {
-    color: #333;
-  }
+
+
+header div img{
+  width: 11vw;
+}
+header #planet{
+  padding-left: 20vw;
+}
+header #titles{
+  padding-right: 20vw;
+}
   
   h1{
+    text-align: right;
+    color: #f4f4f9;
+    margin: 0%;
+    padding-top: 3vw;
+    font-size: 2.5vw;
+  }
+  header p{
+    font-size: 1.5vw;
+    text-align: right;
+    color: #f4f4f9;
+    padding-bottom: 2vw;
+    padding-top: 1vw;
+    margin: 0%;
+  }
+  header{
+    padding: 1vw 1vw ;
+    display: grid;
+    background-color: rgb(0, 0, 0);
+    grid-template-columns: 1fr 1fr;
+    background-image: url('https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-position: center; /* Centers the image */
+     
+  }
+
+  footer{
+    padding: 1vw 1vw ;
+    background-color: rgb(0, 0, 0);
     text-align: center;
   }
 
-  p {
-    color: #555;
+
+
+
+
+
+
+
+
+
+content{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1vw 8vw;
+  gap: 2vw;
+}
+
+content div{
+  background-color: white;
+  padding: 1vw;
+  border-radius: 2%;
+}
+
+.card{
+  text-align: center;
+  border-radius: 2%;
+}
+.card img{
+  border-radius: 2%;
+}
+
+.card h2{
+  font-size: 1vw;
+}
+
+  footer p{
+    color: white;
   }
-  
+
+
+
   button {
     padding: 0.5rem 1rem;
     border: none;
-    background-color: #007BFF;
+    background-color: #2c622c;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #053a73;
+    background-color: #064c96;
   }
   
   ul {
