--- a/styles.css
+++ b/styles.css
@@ -59,14 +59,14 @@ header #titles{
 
 
 
-content{
+section{
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 1vw 8vw;
   gap: 2vw;
 }
 
-content div{
+section div{
   background-color: white;
   padding: 1vw;
   border-radius: 2%;
@@ -80,9 +80,18 @@ content div{
   border-radius: 2%;
 }
 
+
+
 .card h2{
-  font-size: 1vw;
+  font-size: 2vw;
+  margin-bottom: 0%;
 }
+.card h3{
+  font-size: 1.5vw;
+  margin-top: 1vw;
+}
+
+
 
   footer p{
     color: white;
